# eic-speech-nemo

./: README.md  pyproject.toml  setup.sh
src/eic_speech_nemo/: __init__.py  audio.py  cli.py  server.py  state_machine.py  wakeword.py
src/eic_speech_nemo/models/: __init__.py  level0.py  level1.py  level2.py  nemo.py
